; ModuleID = '/home/carl/AnghaBench/skynet/3rd/lpeg/extr_lpcap.c_getcaptures.c'
source_filename = "/home/carl/AnghaBench/skynet/3rd/lpeg/extr_lpcap.c_getcaptures.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i32, i32*, i64, i32*, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @getcaptures(i32* %0, i8* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca %struct.TYPE_3__, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %12 = load i32*, i32** %5, align 8
  %13 = load i32, i32* %8, align 4
  %14 = call i32 @caplistidx(i32 %13)
  %15 = call i64 @lua_touserdata(i32* %12, i32 %14)
  %16 = inttoptr i64 %15 to i32*
  store i32* %16, i32** %9, align 8
  store i32 0, i32* %10, align 4
  %17 = load i32*, i32** %9, align 8
  %18 = call i32 @isclosecap(i32* %17)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %44, label %20

20:                                               ; preds = %4
  %21 = load i32*, i32** %9, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 2
  store i32* %21, i32** %22, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 5
  store i32* %21, i32** %23, align 8
  %24 = load i32*, i32** %5, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 4
  store i32* %24, i32** %25, align 8
  %26 = load i8*, i8** %6, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  store i8* %26, i8** %27, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 3
  store i64 0, i64* %28, align 8
  %29 = load i32, i32* %8, align 4
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 1
  store i32 %29, i32* %30, align 8
  br label %31

31:                                               ; preds = %37, %20
  %32 = call i64 @pushcapture(%struct.TYPE_3__* %11)
  %33 = load i32, i32* %10, align 4
  %34 = sext i32 %33 to i64
  %35 = add nsw i64 %34, %32
  %36 = trunc i64 %35 to i32
  store i32 %36, i32* %10, align 4
  br label %37

37:                                               ; preds = %31
  %38 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 2
  %39 = load i32*, i32** %38, align 8
  %40 = call i32 @isclosecap(i32* %39)
  %41 = icmp ne i32 %40, 0
  %42 = xor i1 %41, true
  br i1 %42, label %31, label %43

43:                                               ; preds = %37
  br label %44

44:                                               ; preds = %43, %4
  %45 = load i32, i32* %10, align 4
  %46 = icmp eq i32 %45, 0
  br i1 %46, label %47, label %57

47:                                               ; preds = %44
  %48 = load i32*, i32** %5, align 8
  %49 = load i8*, i8** %7, align 8
  %50 = load i8*, i8** %6, align 8
  %51 = ptrtoint i8* %49 to i64
  %52 = ptrtoint i8* %50 to i64
  %53 = sub i64 %51, %52
  %54 = add nsw i64 %53, 1
  %55 = trunc i64 %54 to i32
  %56 = call i32 @lua_pushinteger(i32* %48, i32 %55)
  store i32 1, i32* %10, align 4
  br label %57

57:                                               ; preds = %47, %44
  %58 = load i32, i32* %10, align 4
  ret i32 %58
}

declare dso_local i64 @lua_touserdata(i32*, i32) #1

declare dso_local i32 @caplistidx(i32) #1

declare dso_local i32 @isclosecap(i32*) #1

declare dso_local i64 @pushcapture(%struct.TYPE_3__*) #1

declare dso_local i32 @lua_pushinteger(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
